--- a/login.html
+++ b/login.html
@@ -13,11 +13,13 @@
     <div class="row gx-0">
         <div class="col-md-4 alignh gx-0">
             <div class="leftside">
-                <br>
+                <br><br>
             <a class="navbar-brand paddi" href="#"><img class ="logosize" src="logos.png">&nbsp;&nbsp;<b>pdCare</b></a>
             <br><br><div class="des">
-            <p style="color: white;"> <img class="bullet" src="bullet.png">l the details <br> Click submit <br>You are now logged in... </p>
+                <br><br>
+            <p style="color: white;"> <img class="bullet" src="focus.png"> Fill the details <br><img class="bullet" src="focus.png"> Click submit  <br><img class="bullet" src="focus.png">You are now logged in... </p>
             </div>
+            <br><br>
             <img class="brain" src="brain.png" >
             </div>
         </div>
@@ -28,7 +30,8 @@
 
         </div>
     </div>
-    
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     
 </body>
