--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>login</title>
+    <title>signup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style2.css'>
@@ -25,7 +25,51 @@
         </div>
         <div class="col-md-8 alignh gx-0">
             <div class="rightside">
-
+                <h1 style="text-align: left; padding: 40px;">Signup</h1>
+                <form style="text-align: left; padding:40px;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputfirstname" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="exampleInputfirstname">
+                              </div>
+                        </div>
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputlastname" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="exampleInputlastname">
+                              </div>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputGender" class="form-label">Gender</label>
+                               &nbsp;&nbsp; <input type="radio"> Female <input type="radio"> Male <input type="radio"> Other
+                              </div>
+                        </div>
+                        <div class="col">
+                            <div class="mb-3" style="display: flex;">
+                                <label for="exampleInputage" class="form-label">Age</label> &nbsp;&nbsp;
+                                <input type="number" class="form-control" id="exampleInputlastname">
+                              </div>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
             </div>
 
         </div>
