--- a/login.html
+++ b/login.html
@@ -25,7 +25,11 @@
         </div>
         <div class="col-md-8 alignh gx-0">
             <div class="rightside">
-                <h1 style="text-align: left; padding: 40px;">Signup</h1>
+                <br>
+                <p style="text-align: left; padding-left: 40px; padding-top: 30px; color: grey;">START FOR FREE</p>
+                <h1 style="text-align: left; padding-left: 40px;">Create new account.</h1>
+                <p style="text-align: left; padding-left: 40px; padding-top: 30px; color: grey;">Already have an account? <a href="#">Login/SignIn</a></p>
+              
                 <form style="text-align: left; padding:40px;">
                     <div class="row">
                         <div class="col">
